--- a/config/usr/config.min.yaml
+++ b/config/usr/config.min.yaml
@@ -4,3 +4,4 @@ bot:
 # examples: socks5://127.0.0.1:1080
 # protocol://username:password@host:port, now only support socks5
 proxy: socks5://127.0.0.1:1080
+blacklist: []
