--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,8 @@ jobs:
         with:
           go-version: 1.18
           cache: true
+      - name: Install slices dep
+        run: go get golang.org/x/exp/slices
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
